fixed: product list tooltip height overflow.

--- a/app/stylesheets/page.sass
+++ b/app/stylesheets/page.sass
@@ -68,3 +68,7 @@ body
   display: none
   font-size: 14px
   color: #000
+
+.tree
+  height: 500px
+  overflow-y: auto
